# PushScreen

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/codyy/pushscreen/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/rtmp/: libresrtmp.c  libresrtmp.h
app/src/main/java/com/codyy/pushscreen/: AudioRecordWorker.java  ByteArrayTools.java  CaptureService.java  MainActivity.java  MediaMuxerWorker.java  Packager.java  RESFlvData.java  RESFlvDataCollecter.java  ScreenRecordWorker.java  VideoSenderThread.java
app/src/main/java/com/codyy/pushscreen/media/: ByteArrayTools.java  Packager.java  RESByteSpeedometer.java  RESCoreParameters.java  RESFlvData.java  RESFlvDataCollecter.java  RESFrameRateMeter.java  VideoSenderThread.java
app/src/main/java/com/codyy/pushscreen/rtmp/: CallbackDelivery.java  FLvMetaData.java  RESConnectionListener.java  RESFlvData.java  RESFlvDataCollecter.java  RESRtmpSender.java  RtmpClient.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/codyy/pushscreen/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
